fix full range size on small mobile

--- a/src/components/common/preset/Preset.module.css
+++ b/src/components/common/preset/Preset.module.css
@@ -3,7 +3,6 @@
 
 .preset {  
   position: relative;
-  flex: 1;
 }
 .preset:has(:focus-visible) {
   @apply rounded-lg;
